--- a/public/templates/layout.html
+++ b/public/templates/layout.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
   <head>
+      <meta name="viewport" content="initial-scale=1, width=device-width" />
     <meta charset="UTF-8">
     <title>Dev Club Flask!</title>
   </head>
