--- a/public/templates/index.html
+++ b/public/templates/index.html
@@ -6,6 +6,8 @@
         <input autocomplete="off" autofocus 
         name="name" placeholder="Name" 
         type="text" />
+        <input autocomplete="off" name="email"
+        placeholder="Email" type="email" />
         <select name="class">
             <option disabled selected value="">Favorite Class</option>
             <option value="analog electronics">Analog Electronics</option>
